PROJECT(OpenVDB)
cmake_minimum_required(VERSION 3.7)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")
set (CMAKE_CXX_FLAGS "--std=gnu++11 ${CMAKE_CXX_FLAGS}")

FIND_PACKAGE(OpenVDB REQUIRED)
FIND_PACKAGE(TBB REQUIRED)
FIND_PACKAGE(OpenEXR REQUIRED)
FIND_PACKAGE(Boost REQUIRED)

INCLUDE_DIRECTORIES(${OPENVDB_INCLUDE_DIRS} ${BOOST_INCLUDE_DIRS} ${OPENXR_INCLUDE_DIRS} ${TBB_INCLUDE_DIRS})


SET(SRCs
  testOpenVDB)


FOREACH(FILE ${SRCs})
  add_executable(${FILE} ${FILE})
  target_link_libraries (${FILE} ${OPENVDB_LIBRARIES} ${TBB_LIBRARIES} ${OPENEXR_LIBRARIES})
ENDFOREACH(FILE)